--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-derive_more = "0.99"
 log = "0.4"
+thread_local = { version = "1.1", optional = true }
+
+[features]
+tlcr = ["dep:thread_local"]
+old = []
 
 [dev-dependencies]
 env_logger = "0.11"
-tokio = { version = "1", features = ["full"] }
-futures = "0.3"
