--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 log = "0.4"
+thiserror = "1.0"
 thread_local = { version = "1.1", optional = true }
 
 [features]
