--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,12 @@ jold = []
 
 [dev-dependencies]
 env_logger = "0.11"
+criterion = { version = "0.5", features = ["html_reports"] }
+
+# [[bench]]
+# name = "my_benchmark"
+# harness = false
+
+[[bench]]
+name = "tlc_benchmark"
+harness = false
