Added u32 benches to complement the map (HashMap) benches, refactored benchmark runs into three groups, created corresponding scripts.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,13 @@ env_logger = "0.11"
 criterion = { version = "0.5", features = ["html_reports"] }
 
 [[bench]]
-name = "benchmark"
+name = "u32_benchmark"
+harness = false
+
+[[bench]]
+name = "map_benchmark"
+harness = false
+
+[[bench]]
+name = "channeled_bg_benchmark"
 harness = false
