--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,15 @@ env_logger = "0.11"
 criterion = { version = "0.5", features = ["html_reports"] }
 
 [[bench]]
+name = "benchmark"
+harness = false
+
+[[bench]]
 name = "u32_benchmark"
+harness = false
+
+[[bench]]
+name = "u32_group_benchmark"
 harness = false
 
 [[bench]]
