--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "thread_local_collect"
-version = "0.1.0"
+version = "0.5.0"
 edition = "2021"
+license = "MIT"
+description = "Supports the collection and aggregation of thread-local data across threads."
+repository = "https://github.com/pvillela/rust-thread-local-collect"
+readme = "README.md"
+keywords = ["thread-local"]
+categories = ["concurrency"]
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
