Updated version to v0.5.1 to publish with all features.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "thread_local_collect"
-version = "0.5.0"
+version = "0.5.1"
 edition = "2021"
 license = "MIT"
 description = "Supports the collection and aggregation of thread-local data across threads."
-repository = "https://github.com/pvillela/rust-thread-local-collect"
+repository = "https://github.com/pvillela/rust-thread-local-collect/releases/tag/v0.5.1"
 readme = "README.md"
 keywords = ["thread-local"]
 categories = ["concurrency"]
