Updated Cargo.toml to include tlcr feature in published docs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "thread_local_collect"
-version = "0.5.1"
+version = "0.5.2"
 edition = "2021"
 license = "MIT"
 description = "Supports the collection and aggregation of thread-local data across threads."
-repository = "https://github.com/pvillela/rust-thread-local-collect/releases/tag/v0.5.1"
+repository = "https://github.com/pvillela/rust-thread-local-collect/releases/tag/v0.5.2"
 readme = "README.md"
 keywords = ["thread-local"]
 categories = ["concurrency"]
@@ -31,3 +31,6 @@ harness = false
 [[bench]]
 name = "i32_group_benchmark"
 harness = false
+
+[package.metadata.docs.rs]
+features = ["tlcr"]
