--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,19 @@
 [package]
 name = "thread_local_collect"
-version = "0.5.2"
+version = "0.5.3"
 edition = "2021"
 license = "MIT"
 description = "Supports the collection and aggregation of thread-local data across threads."
-repository = "https://github.com/pvillela/rust-thread-local-collect/releases/tag/v0.5.2"
+repository = "https://github.com/pvillela/rust-thread-local-collect/tree/v0.5.3"
 readme = "README.md"
 keywords = ["thread-local"]
 categories = ["concurrency"]
+exclude = [
+    "benches/targets",
+    "examples/*map*.rs",
+    "examples/tlm_joined_bad.rs",
+    "*.sh",
+]
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -33,4 +39,4 @@ name = "i32_group_benchmark"
 harness = false
 
 [package.metadata.docs.rs]
-features = ["tlcr"]
+all-features = true
