--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "thread_local_collect"
-version = "1.0.0"
+version = "0.6.0"
 edition = "2021"
 license = "MIT"
 description = "Supports the collection and aggregation of thread-local data across threads."
@@ -12,6 +12,7 @@ exclude = [
     "benches/targets",
     "examples/*map*.rs",
     "examples/tlm_joined_bad.rs",
+    "CHANGELOG.md",
     "*.sh",
 ]
 
