--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,11 @@ exclude = [
 
 [dependencies]
 log = "0.4"
-thiserror = "1.0"
+thiserror = { version = "1.0", optional = true }
 thread_local = { version = "1.1", optional = true }
 
 [features]
-tlcr = ["dep:thread_local"]
+tlcr = ["dep:thread_local", "dep:thiserror"]
 
 [dev-dependencies]
 env_logger = "0.11"
