--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ exclude = [
     "examples/tlm_joined_bad.rs",
     "CHANGELOG.md",
     "*.sh",
+    ".gitignore",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
